<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/itube_video_player"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etVideoUrl"
        android:hint="@string/enter_youtube_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/btnPlay"
        android:text="@string/play"
        android:backgroundTint="@color/purple_700"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnSave"
        android:text="@string/add_to_playlist"
        android:backgroundTint="@color/purple_700"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnViewSaved"
        android:text="@string/my_playlist"
        android:backgroundTint="@color/purple_700"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnLogout"
        android:text="@string/logout"
        android:backgroundTint="@color/purple_700"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />
</LinearLayout>
